fixed bug: note editor z-index

--- a/less/topTab/idea/noteEditor.less
+++ b/less/topTab/idea/noteEditor.less
@@ -101,6 +101,7 @@
     right: 0;
     bottom: 0;
     left: auto;
+    z-index: 3;
 
     &.panel {
         margin: 0;
@@ -142,6 +143,7 @@
 }
 .km-note-tips {
     color: #ccc;
+    padding: 3px 8px;
 }
 #previewer-content {
     position: absolute;
